syntax = "proto3";

package ProtoWordShard;

message Document {
    string id = 1;

    uint32 revision = 2;
}

message WordLocation {
    uint32 word_index = 1;

    uint32 codepoint_index = 2;
}

message WordEntry {
    oneof word {
        string text = 1;

        uint32 index = 2;
    }

    repeated WordLocation word_locations = 3;
}

message DocumentEntry {
    repeated WordEntry word_entries = 2;
}
